--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,12 @@ futures = "0.3"
 anyhow = "1"
 thiserror = "1"
 
+# Configuration
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+toml = "0.8"
+dirs = "5"
+
 [profile.release]
 opt-level = 3
 lto = true
