--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,12 @@ serde_json = "1"
 toml = "0.8"
 dirs = "5"
 
+# Network and streaming
+reqwest = { version = "0.12", features = ["json", "stream"] }
+eventsource-stream = "0.2"
+tokio-stream = "0.1"
+bytes = "1"
+
 [profile.release]
 opt-level = 3
 lto = true
