feat: Enhance chat functionality with message handling and scrolling support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,13 @@ eventsource-stream = "0.2"
 tokio-stream = "0.1"
 bytes = "1"
 
+# Text processing
+unicode-width = "0.1"
+textwrap = "0.16"
+
+# Time display
+chrono = "0.4"
+
 [profile.release]
 opt-level = 3
 lto = true
