feat: Implement tool system with Bash, Read, and Write tools
- Added `Tool` trait and `ToolContext` for tool execution.
- Implemented `BashTool`, `ReadTool`, and `WriteTool` with respective functionalities.
- Integrated tool execution into the TUI application, allowing for asynchronous tool calls.
- Updated `Cargo.toml` and `Cargo.lock` to include new dependencies (`async-trait`, `similar`).
- Created `PHASE3_IMPLEMENTATION_SUMMARY.md` to document the implementation progress and architecture.
- Enhanced Claude API integration to support tool usage and results.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,10 @@ textwrap = "0.16"
 # Time display
 chrono = "0.4"
 
+# Tool system
+async-trait = "0.1"
+similar = "2.3"
+
 [profile.release]
 opt-level = 3
 lto = true
