--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,10 @@ license = "MIT"
 name = "ok"
 path = "src/main.rs"
 
+[lib]
+name = "ok"
+path = "src/lib.rs"
+
 [dependencies]
 # TUI framework
 ratatui = "0.28"
@@ -46,6 +50,9 @@ chrono = "0.4"
 # Tool system
 async-trait = "0.1"
 similar = "2.3"
+
+[dev-dependencies]
+tempfile = "3"
 
 [profile.release]
 opt-level = 3
