--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,11 @@ futures = "0.3"
 anyhow = "1"
 thiserror = "1"
 
+# Logging
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+tracing-appender = "0.2"
+
 # Configuration
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
