Add glob and grep tools with comprehensive functionality
- Implemented GlobTool for searching files matching glob patterns, supporting recursive searches and .gitignore respect.
- Implemented GrepTool for searching file contents using regex patterns, with options for case sensitivity, context lines, and include/exclude patterns.
- Added input validation and error handling for both tools.
- Created integration tests for both tools covering various scenarios including pattern matching, hidden files, and file not found cases.
- Enhanced test fixture with methods for creating directory structures and .gitignore files.
- Updated Cargo.toml to include necessary dependencies for glob and regex functionalities.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,9 @@ chrono = "0.4"
 # Tool system
 async-trait = "0.1"
 similar = "2.3"
+ignore = "0.4"      # .gitignore support + fast directory traversal
+regex = "1.10"      # Regular expression matching
+globset = "0.4"     # Glob pattern matching
 
 [dev-dependencies]
 tempfile = "3"
