--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,7 +50,7 @@ unicode-width = "0.1"
 textwrap = "0.16"
 
 # Time display
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 
 # Tool system
 async-trait = "0.1"
@@ -58,6 +58,7 @@ similar = "2.3"
 ignore = "0.4"      # .gitignore support + fast directory traversal
 regex = "1.10"      # Regular expression matching
 globset = "0.4"     # Glob pattern matching
+uuid = { version = "1", features = ["v4", "serde"] }  # UUID generation for TodoWrite
 
 [dev-dependencies]
 tempfile = "3"
