feat: Implement BackgroundShellManager and related tools for managing background shell processes
- Added BackgroundShellManager to manage multiple background shell processes.
- Introduced BashOutputTool to monitor output from background shells.
- Created KillShellTool to terminate background shell processes.
- Enhanced BashTool to support background execution of commands.
- Implemented NotebookEditTool for editing Jupyter notebooks.
- Added WebFetchTool for fetching and processing web content with caching.
- Updated ToolContext to include a reference to BackgroundShellManager.
- Modified existing tools to utilize the new shell manager for background operations.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,6 +59,7 @@ ignore = "0.4"      # .gitignore support + fast directory traversal
 regex = "1.10"      # Regular expression matching
 globset = "0.4"     # Glob pattern matching
 uuid = { version = "1", features = ["v4", "serde"] }  # UUID generation for TodoWrite
+html2text = "0.12"  # HTML to markdown conversion for WebFetch
 
 [dev-dependencies]
 tempfile = "3"
